--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,22 @@
     flex-direction: column;
   }
 
+  .numberbutton {
+    border: 0.5px solid #413f3f;
+    color: rgb(55, 56, 59);
+    justify-content: center;
+    align-items: center;
+    background-color: #97eee7;
+    width: 30px;
+    height: 50px;
+    transition: all 0.4s ease-in-out;
+    cursor: pointer;
+  }
+
+  .numberbutton:hover {
+    background-color: #11dd0a;
+  }
+
   .preRes {
     opacity: 26.5%;
   }
